tp03/01-emptydir-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-demo
  labels:
    app: demo
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 65534
    fsGroup: 65534
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: writer
    image: busybox:1.36
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    command: ["/bin/sh"]
    args:
      - -c
      - >
        while true; do
          echo "$(date): Writing data" >> /data/log.txt;
          sleep 5;
        done
    volumeMounts:
    - name: shared-storage
      mountPath: /data
    - name: tmp
      mountPath: /tmp

  - name: reader
    image: busybox:1.36
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    command: ["/bin/sh"]
    args:
      - -c
      - >
        while true; do
          echo "=== Latest logs ===";
          tail -n 5 /data/log.txt;
          sleep 10;
        done
    volumeMounts:
    - name: shared-storage
      mountPath: /data
    - name: tmp
      mountPath: /tmp

  volumes:
  - name: shared-storage
    emptyDir: {}
  - name: tmp
    emptyDir: {}
